Fix issue with light/dark mode

--- a/src/Home.css
+++ b/src/Home.css
@@ -19,6 +19,7 @@ body {
     display: block;
     position: relative;
     background-color: #1c204b;
+    color: white !important;
     min-width: 100%;
     margin: 0;
     z-index: -100;
